# ArtPy

./: README.rst  setup.cfg  setup.py
src/: ArtPy.py
tests/: test_ArtPoll.py
