[metadata]
name = ArtPy
version = 0.0.1

author = Dave Olsthoorn
author-email = dave@bewaar.me

home-page = https://github.com/daveol/ArtPy
description = A pure python implementation of Artnet compatible with micropython
long-description = file: README.rst

license = MIT
license-file = COPYING

platform = any

keywords = ArtNet, DMX
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules